--- a/examples/2-2/index.html
+++ b/examples/2-2/index.html
@@ -1,2 +1,15 @@
 <!DOCTYPE HTML>
 <html lang="en-us">
+	<head>
+		<title>Example 2-2</title>
+		<meta charset="UTF-8">
+	</head>
+	<body>
+		<div>
+			This sentence is going to be broken by <p>this block elements</p>!
+		</div>
+		<div>
+			This sentence won't be broken by<em>this inline element</em> into different parts.
+		</div> 
+	</body>
+</html>
