--- a/examples/2-2/index.html
+++ b/examples/2-2/index.html
@@ -9,7 +9,13 @@
 			This sentence is going to be broken by <p>this block elements</p>!
 		</div>
 		<div>
-			This sentence won't be broken by<em>this inline element</em> into different parts.
+			This sentence won't be broken by <em>this inline element</em> into different parts.
 		</div> 
+		<div>
+			Here are some common inline elements:
+			<p>
+				This is for <b>bolded texts</b>. 
+			</p>
+		</div>
 	</body>
 </html>
