--- a/examples/2-1/index.html
+++ b/examples/2-1/index.html
@@ -5,16 +5,10 @@
 		<meta charset="UTF-8">
 	</head>
 	<body>
-		This is Example 1-2.
-		<head>
-			This is a header.
-		</head>
-		<footer>
-			This is a footer.
-			</footer>
+		<head>This is a header.</head>
+		<footer>This is a footer.</footer>
 			<ol>
-				<li>This is 
-				</li>
+				<li>This is the first point.</li>
 			</ol>
 			<ul>
 	</body>
