--- a/examples/2-2/index.html
+++ b/examples/2-2/index.html
@@ -16,6 +16,18 @@
 			<p>
 				This is for <b>bolded texts</b>. 
 			</p>
+			<p>
+				This is for <mark>highlighted texts</mark>.
+			</p>
+			<p>
+				This is for <sub>subscripted texts</sub>.
+			</p>
+			<p>
+				This is for <s>crossing out some texts</s>.
+			</p>
+			<p>
+				This is for <u>underlined texts</u>.
+			</p>
 		</div>
 	</body>
 </html>
