--- a/examples/2-2/index.html
+++ b/examples/2-2/index.html
@@ -31,6 +31,9 @@
 			<p>
 				This is for <span>a scope of texts</span>.
 			</p>
+			<p>
+				This is a <a>hyperlink</a>.
+			</p>
 		</div>
 	</body>
 </html>
