--- a/examples/2-2/index.html
+++ b/examples/2-2/index.html
@@ -32,7 +32,7 @@
 				This is for <span>a scope of texts</span>.
 			</p>
 			<p>
-				This is a <a>hyperlink</a>.
+				This is a <a href="http://google.com">hyperlink</a>.
 			</p>
 		</div>
 	</body>
