--- a/examples/2-2/index.html
+++ b/examples/2-2/index.html
@@ -32,8 +32,10 @@
 				This is for <span>a scope of texts</span>.
 			</p>
 			<p>
-				This is a <a href="http://google.com">hyperlink</a>.
+				This is a <a href="http://google.com" target="blank">hyperlink</a>.
 			</p>
+			<p>
+				This is a <a href="index2.html">link</a> to another page.
 		</div>
 	</body>
 </html>
