--- a/examples/2-1/index.html
+++ b/examples/2-1/index.html
@@ -9,6 +9,8 @@
 		<footer>This is a footer.</footer>
 			<ol>
 				<li>This is the first point.</li>
+				<li>This is the second point.</li>
+				<li>This is the third point.</li>
 			</ol>
 			<ul>
 	</body>
