--- a/examples/2-3/index.html
+++ b/examples/2-3/index.html
@@ -4,12 +4,13 @@
 		<title>Example 2-3</title>
 		<meta charset="UTF-8">
 	</head>
-	<body>ExampleHere are some special inline elements that are themselves an objext.
+	<body>Here are some special inline elements that are themselves an objext.
 		<p>
 			This is a line-breaking <br/> for multi-line texts.
 		</p>
 		<p>
 			This is a button. <input type="button" value="I'm a button!"/>
+			<button>Another Button</button>
 		</p>
 	</body>
 </html> 
