--- a/examples/2-3/index.html
+++ b/examples/2-3/index.html
@@ -12,5 +12,8 @@
 			This is a button. <input type="button" value="I'm a button!"/>
 			<button>Another Button</button>
 		</p>
+		<figure>
+			<img src="image.jpg" />
+		</figure>
 	</body>
 </html> 
