--- a/examples/2-3/index.html
+++ b/examples/2-3/index.html
@@ -13,7 +13,7 @@
 			<button>Another Button</button>
 		</p>
 		<figure>
-			<img src="image.jpg" />
+			This <img src="image.jpg" /> is an image.
 		</figure>
 	</body>
 </html> 
