--- a/examples/2-1/index.html
+++ b/examples/2-1/index.html
@@ -12,6 +12,9 @@
 				<li>This is the second point.</li>
 				<li>This is the third point.</li>
 			</ol>
-			<ul>This is an unorder texts.</ul>
+			<ul>
+				<li>This is an unorder point.</li>
+				<li>This is another unorder point.</li>
+			</ul>
 	</body>
 </html>
