--- a/progress/2-1/index.html
+++ b/progress/2-1/index.html
@@ -6,16 +6,17 @@
 	</head>
 	<body>
 		<nav>
-			+ | Home | Essay Example | Analysis Guidelines | Structure Analysis
+			+ | <a href="index.html">Home</a> | <a href="example.html">Essay Example</a> | 
+			<a href="guidelines.html">Analysis Guidelines | <a href="analysis.html">Structure Analysis</a>
 		</nav>
 		<article>
 			<h1>Expository Essay Analysis</h1>
 			<p>
-				Fall 2021, Bilingual Web Design, Yi-Lin Chiang
+				Fall 2021, Bilingual Web Design, Yi-Lin Chiang<br/>
 				enk4127@gmail.com
 			</p>
 			<p>
-				Last Updated on Sep 17,2021
+				<em>Last Updated on Sep 24,2021</em>
 			</p>
 		</article>
 	</body>
