--- a/examples/2-5/index.html
+++ b/examples/2-5/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE HTML>
 <html lang="en-us">
 	<head>
-		<title>Example 2-4</title>
-		<link rel="stylesheet" href="css/style.css">
+		<title>Example 2-5</title>
 		<meta charset="utf-8">
+		<style>
+			body {
+				background-color: pink;
+			}
+			p {
+				background-color: yellow;
+			}
+		</style>
 	</head>
 	<body>
 		<p>
