--- a/examples/2-5/index.html
+++ b/examples/2-5/index.html
@@ -5,14 +5,14 @@
 		<meta charset="utf-8">
 		<style>
 			body {
-				background-color: pink;
+				background-color: red;
 			}
 			p {
 				background-color: yellow;
 			}
 		</style>
 	</head>
-	<body style="background-color: red;">
+	<body style="background-color: pink;">/*後者先於前者，先看html*/
 		<p>
 			This is a <b>paragraph</b>.
 		</p>
