--- a/examples/2-5/index.html
+++ b/examples/2-5/index.html
@@ -12,7 +12,7 @@
 			}
 		</style>
 	</head>
-	<body style="background-color: pink;">/*後者先於前者，先看html*/
+	<body style="background-color: pink;"><!--後者先於前者，先看html-->
 		<p>
 			This is a <b>paragraph</b>.
 		</p>
