--- a/examples/2-5/index.html
+++ b/examples/2-5/index.html
@@ -8,11 +8,11 @@
 				background-color: red;
 			}
 			p {
-				background-color: yellow;
+				background-color: pink;
 			}
 		</style>
 	</head>
-	<body style="background-color: pink;"><!--後者先於前者，先看html-->
+	<body style="background-color: orange;"><!--後者先於前者，先看html-->
 		<p>
 			This is a <b>paragraph</b>.
 		</p>
