--- a/personal/index.html
+++ b/personal/index.html
@@ -19,7 +19,7 @@
 	</head>
 	<body>
 		<div>
-			<b>Autobiogrphy</b>
+			<b>Autobiography</b>
 			<p>
 				Hi! I am Yi-Lin Chiang, or you can just call my English name, Elynn. I’m currently a sophomore in NTHU, Taiwan, majoring in FLL and growing interest in learning German language. Hsinchu city is my hometown, and to be exactly, Nanliao is the place where I’ve been lived for years.			 
 			</p>
