--- a/personal/index.html
+++ b/personal/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Temporary Personal Webpage</title>
+		<title>Personal Page</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="../css/default.css">
 		<style>
