--- a/personal/index.html
+++ b/personal/index.html
@@ -24,13 +24,12 @@
 				Hi! I am Yi-Lin Chiang, or you can just call my English name, Elynn. I’m currently a sophomore in NTHU, Taiwan, majoring in FLL and growing interest in learning German language. Hsinchu city is my hometown, and to be exactly, Nanliao is the place where I’ve been lived for years.			 
 			</p>
 			<p>
-				I enjoy literature most of the time and used to read through a bunch<br/>of novels before the busy high school days. Some were well-received sci-fi and fascinating Jin Yong novels, and some were translated version of Harry Potter or Jane Austen’s works. Bringing back the memories then, I’ve always appreciated the imaginary worlds these literary works have helped built up in my mind. At the end, such significant power of words has been recalled frequently and fueled my passion in pursuing languages
-				and literature.
+				I enjoy literature most of the time and used to read through a bunch<br/>of novels before the busy high school days. Some were well-received sci-fi and fascinating Jin Yong novels, and some were translated version of Harry Potter or Jane Austen’s works. Bringing back the memories, I’ve always appreciated the imaginary worlds these literary works have created and shaped my perception then. At the end, such significant power of words has been recalled frequently and fueled my passion in pursuing languages and literature now.
 			</p>
 			<p>
-				Besides academic interests, sports and music are also crucial parts in my life. I consider that they all play important roles in soothing one’s feeling or even causing inspiration. To transfer a mood, I can simply go for a jog or join volleyball practices
-				with teammates in the sports field. Sometimes, the night atmosphere around this faraway
-				 area on campus can magically cheer one’s spirit and lighten the mood. I’d also like to set myself in the cozy piano chair at home and bury into melody from several piano pieces from time to time. To conclude, I’m not yet an artistic person, but rather I would describe myself as sentimental.
+				Apart from academic interests, sports and music are also crucial parts in my life. I consider that they all play important roles in soothing one’s feeling or even causing inspiration. To transfer a mood, I can simply go for a jog or join volleyball practices
+				with teammates in the sports field. Sometimes, the night atmosphere around that faraway
+				 area on campus can magically cheer one’s spirit and lighten the mood. Besides, I’d also like to set myself in the cozy piano chair at home and bury into melody from several piano pieces. The music could say a lot of stories just like words. To conclude, as a sentimental person though, I enjoy and look forward to absorb various kinds of knowledge, either literature or practical skills like programming, and therefore I take this course in the department.
 			</p>
 		</div>
 	</body>
