--- a/personal/index.html
+++ b/personal/index.html
@@ -11,9 +11,9 @@
 		div {
 			font-size: 18px;
 			background-color: beige;
-			width: 40%;
+			width: 50%;
 			margin-left: 20%;
-			margin-top: 40px;
+			margin-top: 30px;
 		}
 		</style>
 	</head>
@@ -29,7 +29,7 @@
 			<p>
 				Apart from academic interests, sports and music are also crucial parts in my life. I consider that they all play important roles in soothing one’s feeling or even causing inspiration. To transfer a mood, I can simply go for a jog or join volleyball practices
 				with teammates in the sports field. Sometimes, the night atmosphere around that faraway
-				 area on campus can magically cheer one’s spirit and lighten the mood. Besides, I’d also like to set myself in the cozy piano chair at home and bury into melody from several piano pieces. The music could say a lot of stories just like words. To conclude, as a sentimental person though, I enjoy and look forward to absorb various kinds of knowledge, either literature or practical skills like programming, and therefore I take this course in the department.
+				 area on campus can magically cheer one’s spirit and lighten the mood. Besides, I’d also like to set myself in the cozy piano chair at home and bury into melody from several piano pieces. The music could say a lot of stories just like words. To conclude, as a sentimental person though, I enjoy and look forward to absorb various kinds of knowledge, either about literature or practical skills like programming, and therefore I take this course in the department.
 			</p>
 		</div>
 	</body>
