--- a/examples/5-4/index.html
+++ b/examples/5-4/index.html
@@ -17,28 +17,28 @@
 				background-color: orange;
 			}*/
 
-			/*body > p {
-				background-color: orange;
-			}*/
-
-			body p {
+			body > p {
 				background-color: orange;
 			}
 
-			/*div {
-				background-color: crimson;
+			/*body p {
+				background-color: orange;
 			}*/
+
+			div {
+				background-color: blueviolet;
+			}
 
 			/*div.friends {
 				background-color: yellow;
 			}*/
 
-			/*p + div {
+			p + div {
 				background-color: crimson;
-			}*/
+			}
 
 			p ~ div {
-				background-color: crimson;
+				background-color: greenyellow;
 			}
 		</style>
 	</head>
@@ -54,7 +54,6 @@
 		</div>
 		<div>
 			I don't like other div.
-		</div>
-	
+		</div>	
 	</body>
 </html>
