--- a/personal/index.html
+++ b/personal/index.html
@@ -24,12 +24,15 @@
 				Hi! I am Yi-Lin Chiang, or you can just call my English name, Elynn. I’m currently a sophomore in NTHU, Taiwan, majoring in FLL and growing interest in learning German language. Hsinchu city is my hometown, and to be exactly, Nanliao is the place where I’ve been lived for years.			 
 			</p>
 			<p>
-				I enjoy literature most of the time and used to read through a bunch<br/>of novels before the busy high school days. Some were well-received sci-fi and fascinating Jin Yong novels, and some were translated version of Harry Potter or Jane Austen’s works. Bringing back the memories, I’ve always appreciated the imaginary worlds these literary works have created and shaped my perception then. At the end, such significant power of words has been recalled frequently and fueled my passion in pursuing languages and literature now.
+				I enjoy literature most of the time and used to read through a bunch<br/>of novels before the busy high school days. Some were well-received sci-fi and fascinating Jin Yong novels, and some were translated version of Harry Potter or Jane Austen’s works. Bringing back the memories, I really appreciate the imaginary worlds these literary works have created and brought into my early childhood. At the end, such significant power of words has been frequently recalled, and fueled my passion in pursuing languages and literature now.
 			</p>
 			<p>
 				Apart from academic interests, sports and music are also crucial parts in my life. I consider that they all play important roles in soothing one’s feeling or even causing inspiration. To transfer a mood, I can simply go for a jog or join volleyball practices
 				with teammates in the sports field. Sometimes, the night atmosphere around that faraway
-				 area on campus can magically cheer one’s spirit and lighten the mood. Besides, I’d also like to set myself in the cozy piano chair at home and bury into melody from several piano pieces. The music could say a lot of stories just like words. To conclude, as a sentimental person though, I enjoy and look forward to absorb various kinds of knowledge, either about literature or practical skills like programming, and therefore I take this course in the department.
+				 area on campus can magically cheer one’s spirit and lighten one's mood. Besides, I’d also like to set myself in the cozy piano chair at home and bury into melody from several piano pieces. Believe it or not, a piano piece can tell stories just like in literature.
+			</p>
+			<p>
+				To conclude, as a sentimental person though, I enjoy and look forward to absorb various kinds of knowledge. The website is just the present result from my programming cource, hope you enjoy the design and content.
 			</p>
 		</div>
 	</body>
