--- a/personal/index.html
+++ b/personal/index.html
@@ -17,6 +17,9 @@
 		}
 		</style>
 	</head>
+	<figure style="text-aLign: left;">
+				<img src="img/Nanliao harbor.jpg"/>
+	</figure>
 	<body>
 		<div>
 			<b>Autobiography</b>
@@ -32,7 +35,7 @@
 				 area on campus can magically cheer one’s spirit and lighten one's mood. Besides, I’d also like to set myself in the cozy piano chair at home and bury into melody from several piano pieces. Believe it or not, a piano piece can tell stories just like in literature.
 			</p>
 			<p>
-				To conclude, as a sentimental person though, I enjoy and look forward to absorb various kinds of knowledge. The website is just the present result from my programming cource, hope you enjoy the design and content.
+				As a sentimental person though, I enjoy and look forward to absorb various kinds of knowledge. For example, building up a bilingual website! Hope you enjoy the present result from my programming cource.
 			</p>
 		</div>
 	</body>
