--- a/personal/index.html
+++ b/personal/index.html
@@ -5,40 +5,50 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="../css/default.css">
 		<style>
+			@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Open+Sans&display=swap');
 
-			body {
-				background-color: beige;
-				font-family : Open Sans, sans-serif;
+			figure {
+				position: absolute;
+				padding-top: 30px;
+				left: -10px;
+			}
+			nav {
+				position: fixed;
+				background-color: grey;
+				opacity: 0.7;
+				height: 20px;
+				line-height: 20px;
 			}
 
+
 			h1 {
+				margin-top: 30px;
 				font-size: 19px;
 				background-color: lavender;
 			}
+
 
 			article:first-of-type {
 				width: 40%;
 				margin-left: 10%;
 				display: block;
 				position: absolute;
-				background-color: orange;
 				font-size: 18px;
 			}
 
 			article:last-of-type {
 				width: 33%;
 				display: block;
-				position: relative;
+				position: fixed;
+				opacity: 0.9;
 				left: 60%;
-				background-color: lightpink;
+				background-color: #ffb6c1;
 				font-family: 'Noto Sans TC', sans-serif;
 			}
 		</style>
 	</head>
-	<figure style="text-aLign: right;">
-		<img src="Nharbor.jpg"/>The beautiful Nanliao harbor.
-	</figure>
 	<body>
+		<figure><img src = "Nharbor.jpg"/></figure>
 		<nav>
 			<a>+</a> | <a href="index.html">Home</a> | <a href="example.html">Essay Example</a> | 
 			<a href="guidelines.html">Analysis Guidelines</a> | <a href="analysis.html">Structure Analysis</a>
@@ -46,13 +56,13 @@
 		<article>
 			<h1><b>Autobiography</b></h1>
 			<p>
-				Hi! I am Yi-Lin Chiang, or you can just call my English name, Elynn. I’m currently a sophomore in NTHU, Taiwan, majoring in FLL and growing interest in learning German language. Hsinchu City is my hometown, and to be exactly, Nanliao is the place where I’ve been lived for years.			 
+				Hi! I am Yi-Lin Chiang, or you can just call my English name, Elynn. I’m currently a sophomore in NTHU, Taiwan, majoring in FLL and growing interest in learning German language. Hsinchu City is my hometown, and to be exactly, Nanliao is the place where I’ve been lived for years.
 			</p>
 			<p>
-				I enjoy reading literature and consider it play an important role in soothing one’s feeling, just like my other two interests, the music and sports. Besides watching movie series on Netflix or YouTube, I like to do various kinds of sports and listen to the music. These hobbies are both crucial parts in my life. I like to randomly pick up a time and go for a jog in the sport field on campus. Sometimes, burying mtself into the melody from classical piano pieces is also another fascinating choice. 
+				I enjoy reading literature and consider it play an important role in soothing one’s feeling, just like the music and sports. Among all of my hobbies, playing the piano or doing various kinds of sports are always crucial parts and keep me companies when I get down. Sometimes, I like to randomly pick up a time and go for a jog in the sport field on campus. The fresh air  At home, I also burying mtself into the melody from classical piano pieces. 
 			</p>
 			<p>
-				Before the busy high school days, reading fictions used to be one of my favorite pastimes. I liked to borrow well-received series like Harry Potter, every work from Jin Yong, or somteimes the translated version of foreign classics, such as Jane Austen’s works. Bringing back those memories, I am appreciate that these literary works brought imagination into my early adolescence. Needless to say, they show the readers all over the world an significant power of words. At last, they also fuel my passion in pursuing languages and literature in college.
+				Before the busy high school days, reading fictions used to be one of my favorite pastimes. I liked to borrow well-received series like Harry Potter, every work from Jin Yong, or somteimes the translated version of foreign classics, such as Jane Austen’s works. Bringing back those memories, I always appreciate that these literary works have brought different perspectives and enriched my early adolescence. Needless to say, they show readers all over the world an significant power of words. In the end, they also fuel my passion in pursuing languages and literature in college.
 			</p>
 		</article>
 		<article>
@@ -60,7 +70,7 @@
 					歡迎來到我的網站!我是江宜霖，來自新竹南寮，目前為一名就讀清大外文系的大二生，並且對於學習德語感到興趣。閒暇時除了瀏覽一些影集或是YouTube上的影片之外，我也喜歡聆聽音樂和嘗試各式各樣的運動，如慢跑、打排球、桌球、或是和朋友一起到攀岩場體驗等等。對我來說彈鋼琴是最好親近古典音樂的方式，也是長久以來一直陪伴著我的興趣。這些不同的嗜好和文學一樣，皆有舒緩人心的效果，在我偶爾陷入疲累的時候能夠幫助轉換心情、釋放情緒。
 				</p>
 				<p>
-					高中以前，我喜歡徜徉在小說的世界之中，並閱讀了每一本金庸的作品、暢銷的哈利波特、或者少數外國經典的翻譯作品，例如《飄》、《基督山恩仇記》和《傲慢與偏見》等等，即使因時間過去許久對於其中的內容情節不復以往的熟悉，但是回想起那些時光，我總是很感激有文學的陪伴，開闊了我的視野也幫助豐富了我的想像力，最後更將我成功地推向現在研究外國語文學的這條路上。
+					高中以前，我喜歡徜徉在小說的世界之中，並閱讀了每一本金庸的作品、暢銷的哈利波特小說，與一些外國經典的翻譯作品，例如《飄》、《基督山恩仇記》和《傲慢與偏見》等等，即使因時間過去許久對於其中的內容情節不復以往的熟悉，但是回想起那些時光，我總是很感激有文學的陪伴，開闊了我的視野與豐富我的想像力，最後更將我成功地推向現在研究外國語文學的這條路上。
 				</p>
 		</article>
 	</body>
