--- a/personal/index.html
+++ b/personal/index.html
@@ -7,14 +7,18 @@
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Open+Sans&display=swap');
 
+			body {
+				background-color: #f5f5dc;
+			}
+			
 			figure {
 				position: absolute;
 				padding-top: 30px;
 				left: -10px;
 			}
+
 			nav {
 				position: fixed;
-				background-color: grey;
 				opacity: 0.7;
 				height: 20px;
 				line-height: 20px;
@@ -24,7 +28,7 @@
 			h1 {
 				margin-top: 30px;
 				font-size: 19px;
-				background-color: lavender;
+				background-color: #e6e6fa;
 			}
 
 
@@ -45,6 +49,7 @@
 				background-color: #ffb6c1;
 				font-family: 'Noto Sans TC', sans-serif;
 			}
+		
 		</style>
 	</head>
 	<body>
@@ -59,7 +64,7 @@
 				Hi! I am Yi-Lin Chiang, or you can just call my English name, Elynn. I’m currently a sophomore in NTHU, Taiwan, majoring in FLL and growing interest in learning German language. Hsinchu City is my hometown, and to be exactly, Nanliao is the place where I’ve been lived for years.
 			</p>
 			<p>
-				I enjoy reading literature and consider it play an important role in soothing one’s feeling, just like the music and sports. Among all of my hobbies, playing the piano or doing various kinds of sports are always crucial parts and keep me companies when I get down. Sometimes, I like to randomly pick up a time and go for a jog in the sport field on campus. The fresh air  At home, I also burying mtself into the melody from classical piano pieces. 
+				I enjoy reading literature and consider it play an important role in soothing one’s feeling, just like the music and sports.  At home, I like to bury mtself into the melody from classical piano pieces. To transfer a mood, I can simply go for a jog in the sport field on campus. Among all of my hobbies, playing the piano or doing various kinds of sports are always crucial parts and keep me companies when I get down. Sometimes, 
 			</p>
 			<p>
 				Before the busy high school days, reading fictions used to be one of my favorite pastimes. I liked to borrow well-received series like Harry Potter, every work from Jin Yong, or somteimes the translated version of foreign classics, such as Jane Austen’s works. Bringing back those memories, I always appreciate that these literary works have brought different perspectives and enriched my early adolescence. Needless to say, they show readers all over the world an significant power of words. In the end, they also fuel my passion in pursuing languages and literature in college.
