--- a/Trial/Tripwith/index.html
+++ b/Trial/Tripwith/index.html
@@ -4,6 +4,7 @@
 		<title>Tripwith</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/default.css">
+		<script type="text/javascript" src="demo.js"></script>
 		<style>
 
 			nav {
@@ -18,26 +19,21 @@
 				font-size: 25px;
 				color: #ff5733;
 			}
-
-
-			article:first-of-type {
-				width: 40%;
-				margin-left: 5%;
-				position: absolute;
-				background-color: #ffebcd;
-			}
-
+			
 		</style>
 	</head>
-	<body>
-		<figure><img src = "t1.png"/></figure>	
+	<body>	
 		<nav>
 			<a>+</a> | <a href="index.html">Home</a> | <a href="example.html">Our goals</a> | 
 			<a href="guidelines.html">Guidelines</a> | <a href="analysis.html">Rating system & Feedback</a>
 		</nav>
-		<article>
+		<figure><img src = "t1.png"/></figure>
+		<div>
 			<h1><b>Tripwith</b></h1>
-			<div><b>Start your unforgettable experience here!</b></div>		
-		</article>	
+			<p><b>Start your unforgettable experience here!</b></p>
+		</div>	
+		<button>Hit me</button><br/>
+		<input type="text" style="width: 500px;" /><br/>
+		<textarea style="width: 500px; height: 250px;"></textarea>
 	</body>
 </html>
