--- a/Trial/Tripwith/rating.html
+++ b/Trial/Tripwith/rating.html
@@ -27,10 +27,12 @@
 			<a>+</a> | <a href="index.html">Home</a> | <a href="example.html">Our goals</a> | 
 			<a href="guidelines.html">Guidelines</a> | <a href="rating.html">Rating system & Feedback</a>
 		</nav>
-		<figure><img src = "t1.png"/></figure>
 		<div>
 			<h1><b>Tripwith</b></h1>
 			<p><b>Start your unforgettable experience here!</b></p>
 		</div>	
+		<button>Rating</button><br/>
+		<input type="text" style="width: 500px;" /><br/>
+		<textarea style="width: 500px; height: 250px;"></textarea>
 	</body>
 </html>
