--- a/Trial/Tripwith/index.html
+++ b/Trial/Tripwith/index.html
@@ -20,6 +20,10 @@
 				color: #ff5733;
 			}
 
+			figure {
+				display: block;
+			}
+
 		</style>
 	</head>
 	<body>	
@@ -32,5 +36,7 @@
 			<h1><b>Tripwith</b></h1>
 			<p><b>Start your unforgettable experience here!</b></p>
 		</div>	
+		<figure><img src = "t2.png"/></figure>
+		<figure><img src = "t3.png"/></figure>
 	</body>
 </html>
