--- a/Trial/Tripwith/index.html
+++ b/Trial/Tripwith/index.html
@@ -20,7 +20,11 @@
 				color: #ff5733;
 			}
 
-			figure {
+			button {
+				background-color: #ff3633;
+			}
+
+			figure.g2 {
 				display: block;
 			}
 
@@ -31,12 +35,15 @@
 			<a>+</a> | <a href="index.html">Home</a> | <a href="example.html">Our goals</a> | 
 			<a href="guidelines.html">Guidelines</a> | <a href="rating.html">Rating system & Feedback</a>
 		</nav>
-		<figure><img src = "t1.png"/></figure>
+		<figure style="text-aLign: center;">
+		<img src="t1.png"/>
+		</figure>
 		<div>
 			<h1><b>Tripwith</b></h1>
 			<p><b>Start your unforgettable experience here!</b></p>
 		</div>	
-		<figure><img src = "t2.png"/></figure>
-		<figure><img src = "t3.png"/></figure>
+		<button>Sign up</button>
+		<figure id='g2'><img src = "t2.png"/></figure>
+		<figure id='g2'><img src = "t3.png"/></figure>
 	</body>
 </html>
