--- a/Trial/Tripwith/rating.html
+++ b/Trial/Tripwith/rating.html
@@ -24,7 +24,7 @@
 	</head>
 	<body>	
 		<nav>
-			<a>+</a> | <a href="index.html">Home</a> | <a href="example.html">Our goals</a> | 
+			<a>+</a> | <a href="index.html">Home</a> | <a href="goal.html">Our goals</a> | 
 			<a href="guidelines.html">Guidelines</a> | <a href="rating.html">Rating system & Feedback</a>
 		</nav>
 		<div>
