--- a/Trial/Tripwith/index.html
+++ b/Trial/Tripwith/index.html
@@ -25,15 +25,17 @@
 			}
 
 			figure.g2 {
-				display: block;
+				display: inline-block;
+				margin: 10px;
+				height: 50px;
+				width: 50px;
 			}
 
 		</style>
 	</head>
 	<body>	
 		<nav>
-			<a>+</a> | <a href="index.html">Home</a> | <a href="goal.html">Our goals</a> | 
-			<a href="guidelines.html">Guidelines</a> | <a href="rating.html">Rating system & Feedback</a>
+			<a><button>Sign up</button></a> | <a href="index.html">Home</a> | <a href="goal.html">Log in</a> | <a href="goal.html">Language</a> | <a href="guide.html">Become a guide</a> | <a href="goal.html">Experiences</a> | <a href="rating.html">Rating system & Feedback</a>
 		</nav>
 		<figure style="text-aLign: center;">
 		<img src="t1.png"/>
@@ -42,7 +44,13 @@
 			<h1><b>Tripwith</b></h1>
 			<p><b>Start your unforgettable experience here!</b></p>
 		</div>	
-		<button>Sign up</button>
+		<article>
+			<h2>Our goals</h2>
+			<mark>Seeking Environmental-friendly trips</mark>
+				<p>We are a group of passionate local guides.</p>
+			<mark>We want to invite you in authentic experiences</mark>
+				<p>Come to our locations and enjoy an exciting cultural trip with us.</p>
+		</article>
 		<figure id='g2'><img src = "t2.png"/></figure>
 		<figure id='g2'><img src = "t3.png"/></figure>
 	</body>
