--- a/Trial/Tripwith/goal.html
+++ b/Trial/Tripwith/goal.html
@@ -21,7 +21,7 @@
 				We are a group of passionate local guides.
 			</p>
 			<section>
-				<h2>We want to invite you in authentic tastes</h2>
+				<h2>We want to invite you in authentic experiences</h2>
 				<p>Come to our locations and enjoy an exciting cultural trip with us.</p>		
 			</section>
 		</article>
