--- a/Trial/Tripwith/goal.html
+++ b/Trial/Tripwith/goal.html
@@ -16,7 +16,7 @@
 		</div>	
 	</body>
 		<article>
-			<h1>Seeking Environmental-friendly trips</h1>
+			<h1>Seeking Environmentally friendly trips</h1>
 			<p>
 				We are a group of passionate local guides.
 			</p>
