--- a/Trial/Tripwith/index.html
+++ b/Trial/Tripwith/index.html
@@ -46,7 +46,7 @@
 		</div>	
 		<article>
 			<h2>Our goals</h2>
-			<mark>Seeking Environmental-friendly trips</mark>
+			<mark>Seeking Environmentally friendly trips</mark>
 				<p>We are a group of passionate local guides.</p>
 			<mark>We want to invite you in authentic experiences</mark>
 				<p>Come to our locations and enjoy an exciting cultural trip with us.</p>
