--- a/Trial/Innovative idea/From FLL/index.html
+++ b/Trial/Innovative idea/From FLL/index.html
@@ -7,6 +7,122 @@
 		<div>
 			<b>Among all the confusion and doubts, language owns the power that never would vanish.</b>
 		</div>
+		<article>
+			<h1>The Bicentennial Man</h1>
+			<p>Andrew Martin said, "Thank you," and took the seat offered him. He
+didn't look driven to the last resort, but he had been.
+He didn't, actually, look anything, for there was a smooth blankness, to
+his face, except for the sadness one imagined one saw in his eyes. His hair
+was smooth, light brown, rather fine; and he had no facial hair. He looked
+freshly and cleanly shaved. His clothes were distinctly old-fashioned, but
+neat, and predominantly a velvety red-purple in color.
+Facing him from behind the desk was the surgeon. The nameplate on
+the desk included a fully identifying series of letters and numbers which
+Andrew didn't bother with. To call him Doctor would be quite enough.
+"When can the operation be carried through, Doctor?" he asked.
+Softly, with that certain inalienable note of respect that a robot always
+used to a human being, the surgeon said, "I am not certain, sir, that I
+understand how or upon whom such an operation could be performed."
+There might have been a look of respectful intransigence on the
+surgeon's face, if a robot of his sort, in lightly bronzed stainless steel,
+could have such an expression- or any expression.
+Andrew Martin studied the robot's right hand, his cutting hand, as it
+lay motionless on the desk. The fingers were long and were shaped into
+artistically metallic, looping curves so graceful and appropriate that one
+could imagine a scalpel fitting them and becoming, temporarily, one piece
+with them. There would be no hesitation in his work, no stumbling, no
+quivering, no mistakes. That confidence came with specialization, of
+course, a specialization so fiercely desired by humanity that few robots
+were, any longer, independently brained. A surgeon, of course, would
+have to be. But this one, though brained, was so limited in his capacity
+that he did not recognize Andrew, had probably never heard of him.
+"Have you ever thought you would like to be a man?" Andrew asked.
+The surgeon hesitated a moment, as though the question fitted
+nowhere in his allotted positronic pathways. "But I am a robot, sir."
+"Would it be better to be a man?"
+"If would be better, sir, to be a better surgeon. I could not be so if I
+were a man, but only if I were a more advanced robot. I would be pleased
+194
+to be a more advanced robot."
+"It does not offend you that I can order you about? That I can make
+you stand up, sit down, move right or left, by merely telling you to do so?"
+"It is my pleasure to please you, sir. If your orders were to interfere
+with my functioning with respect to you or to any other human being, I
+would not obey you. The First Law, concerning my duty to human safety,
+would take precedence over the Second Law relating to obedience.
+Otherwise, obedience is my pleasure. Now, upon whom am I to perform
+this operation?"
+"Upon me," Andrew said.
+"But that is impossible. It is patently a damaging operation."
+"That does not matter," said Andrew, calmly. "I must not inflict
+damage," said the surgeon. "On a human being, you must not," said
+Andrew, "but I, too, am a robot."</p>
+			<section>
+				Andrew had appeared much more a robot when he had first been manufactured. He had then been as much a robot in appearance as any that
+had ever existed, smoothly designed and functional.
+He had done well in the home to which he had been brought in those
+days when robots in households, or on the planet altogether, had been a
+rarity. There had been four in the home: Sir and Ma'am and Miss and
+Little Miss. He knew their names, of course, but he never used them. Sir
+was Gerald Martin.
+His own serial number was NDR- He eventually forgot the numbers. It
+had been a long time, of course; but if he had wanted to remember, he
+could not have forgotten. He had not wanted to remember.
+Little Miss had been the first to call him Andrew, because she could
+not use the letters, and all the rest followed her in this.
+Little Miss- She had lived for ninety years and was long since dead.
+He had tried to call her Ma'am once, but she would not allow it. Little
+Miss she had been to her last day.
+Andrew had been intended to perform the duties of a valet, a butler,
+even a lady's maid. Those were the experimental days for him and, indeed,
+for all robots anywhere save in the industrial and exploratory factories and
+stations off Earth.
+195
+The Martins enjoyed him, and half the time he was prevented from
+doing his work because Miss and Little Miss wanted to play with him. It
+was Miss who first understood how this might be arranged. "We order you
+to play with us and you must follow orders."
+"I am sorry, Miss, but a prior order from Sir must surely take
+precedence."
+But she said, "Daddy just said he hoped you would take care of the
+cleaning. That's not much of an order. I order you."
+Sir did not mind. Sir was fond of Miss and of Little Miss, even more
+than Ma'am was; and Andrew was fond of them, too. At least, the effect
+they had upon his actions were those which in a human being would have
+been called the result of fondness. Andrew thought of it as fondness for he
+did not know any other word for it.
+It was for Little Miss that Andrew had carved a pendant out of wood.
+She had ordered him to. Miss, it seemed, had received an ivorite pendant
+with scrollwork for her birthday and Little Miss was unhappy over it. She
+had only a piece of wood, which she gave Andrew together with a small
+kitchen knife.
+He had done it quickly and Little Miss had said, "That's nice, Andrew.
+I'll show it to Daddy."
+Sir would not believe it. "Where did you really get this, Mandy?"
+Mandy was what he called Little Miss. When Little Miss assured him she
+was really telling the truth, he turned to Andrew. "Did you do this,
+Andrew?"
+"Yes, Sir."
+"The design, too?"
+"Yes, Sir."
+"From what did you copy the design?"
+"It is a geometric representation, Sir, that fits the grain of the wood."
+The next day, Sir brought him another piece of wood- a larger one and an electric vibro-knife. "Make something out of this, Andrew.
+Anything you want to," he said.
+Andrew did so as Sir watched, then looked at the product a long time.
+After that, Andrew no longer waited on tables. He was ordered to read
+books on furniture design instead, and he learned to make cabinets and
+desks.
+"These are amazing productions, Andrew," Sir soon told him.
+"I enjoy doing them, Sir," Andrew admitted.
+"Enjoy?"
+196
+"It makes the circuits of my brain somehow flow more easily. I have
+heard you use the word `enjoy' and the way you use it fits the way I feel. I
+enjoy doing them, Sir."
+			</section>
+
+		</article>
 	</body>
 
 </html>
