--- a/personal/index.html
+++ b/personal/index.html
@@ -5,6 +5,9 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/default.css">
 		<style>
+			body {
+				background-color: #f5f5dc;
+			}
 
 			nav {
 				position: fixed;
@@ -57,7 +60,7 @@
 	</head>
 	<body>
 		<nav>
-			<a>+</a> | <a href="index.html">Home</a> | <a href="example.html">Essay Example</a> | 
+			<a>+</a> | <a href="index.html">Home</a> | <a href="undefined.html">Essay</a> | 
 			<a href="guidelines.html">Analysis Guidelines</a> | <a href="analysis.html">Structure Analysis</a>
 		</nav>
 		<article>
