--- a/personal/essay.html
+++ b/personal/essay.html
@@ -43,7 +43,7 @@
 	</style>
 	<body>
 		<nav>
-			<a>+</a> | <a href="index.html">Home</a> | <a href="undefined.html">Essay</a> | 
+			<a>+</a> | <a href="index.html">Home</a> | <a href="essay.html">Essay</a> | 
 			<a href="guidelines.html">Analysis Guidelines</a> | <a href="analysis.html">Structure Analysis</a>
 		</nav>
 		<article>
