--- a/personal/index.html
+++ b/personal/index.html
@@ -60,7 +60,7 @@
 	</head>
 	<body>
 		<nav>
-			<a>+</a> | <a href="index.html">Home</a> | <a href="undefined.html">Essay</a> | 
+			<a>+</a> | <a href="index.html">Home</a> | <a href="essay.html">Essay</a> | 
 			<a href="guidelines.html">Analysis Guidelines</a> | <a href="analysis.html">Structure Analysis</a>
 		</nav>
 		<article>
