--- a/personal/index.html
+++ b/personal/index.html
@@ -75,8 +75,8 @@
 				Before the busy high school days, reading fictions used to be one of my favorite pastimes. I liked to borrow well-received series like Harry Potter, every work from Jin Yong, or sometimes the translated version of foreign classics, such as Jane Austen’s works. Bringing back those memories, I always appreciate that these literary works have brought about imagination and enriched my early adolescence. Needless to say, they show readers all over the world a significant power of words. In the end, they also fuel my passion in pursuing languages and literature in college.
 			</p>
 		</article>
-		<figure><img src = "Nport.jpg"/></figure>		
-		<figure><img src = "nthucampus.jpg"/></figure>
+		<figure><img src = "img/Nport.jpg"/></figure>		
+		<figure><img src = "img/nthucampus.jpg"/></figure>
 		<article>
 				<p>
 					歡迎來到我的網站!我是江宜霖，來自新竹南寮，目前為一名就讀清大外文系的大二生，並且對於學習德語感到興趣。閒暇時除了瀏覽一些影集或是YouTube上的影片之外，我也喜歡聆聽音樂和嘗試各式各樣的運動，如慢跑、打排球、桌球、或是和朋友一起到攀岩場體驗等等。對我來說彈鋼琴是最好親近古典音樂的方式，也是長久以來一直陪伴著我的興趣。這些不同的嗜好和文學一樣，皆有舒緩人心的效果，在我偶爾陷入疲累的時候能夠幫助轉換心情、釋放情緒。
@@ -85,6 +85,6 @@
 					高中以前，我喜歡徜徉在小說的世界之中，並閱讀了每一本金庸的作品、暢銷的哈利波特小說，與一些外國經典的翻譯作品，例如《飄》、《基督山恩仇記》和《傲慢與偏見》等等，即使因時間過去許久對於其中的內容情節不復以往的熟悉，但是回想起那些時光，我總是很感激有文學的陪伴，開闊了我的視野與豐富我的想像力，最後更將我成功地推向現在研究外國語文學的這條路上。
 				</p>
 		</article>
-		<figure><img src = "Frankfurt.jpg"/></figure>
+		<figure><img src = "img/Frankfurt.jpg"/></figure>
 	</body>
 </html>
