--- a/personal/essay.html
+++ b/personal/essay.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
-<html lang='en-us'>
+<html lang="en-us">
 	<head>
-		<meta charset='utf-8'>
+		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/default.css">
 	</head>
 	<style>
