--- a/analysis/16-1/index.html
+++ b/analysis/16-1/index.html
@@ -14,11 +14,11 @@
 		<article style="text-align: center; position: absolute; top: 50%; width: 100%; transform: translateY(-50%);">
 			<h1>Expository Essay Analysis</h1>
 			<p>
-				Fall 2021, Bilingual Web Design, Yi-Lin Chiang<br/>
-				enk4127@gmail.com
+				Fall 2021, Bilingual Web Design, Tsung-Ying Chen<br/>
+				chen.ty@mx.nthu.edu.tw
 			</p>
 			<p>
-				<em>Last Updated on Jan, 2022</em>
+				<em>Last Updated on Dec 17, 2021</em>
 			</p>
 		</article>
 	</body>
