--- a/analysis/example.html
+++ b/analysis/example.html
@@ -59,7 +59,10 @@
 			<section id="sec1">
 				<h3>[Sec. #1]</h3>
 				<p>
-					Learning your odds of eventually developing dementia — a pressing concern for many, especially those with a family history of it — requires medical testing and counseling. But what if everyday behavior, like overlooking a couple of credit card payments or habitually braking while driving, could foretell your risk? <span class="joint">&#9658;</span> <span class="vocab">A spate of<span><b>"a spate of"</b> - a large number of things</span></span> experiments is underway to explore that possibility, reflecting the growing awareness that the pathologies underlying dementia can begin years or even decades before symptoms emerge.
+					Clean energy technologies such as wind turbines, solar panels and electric vehicles are advancing so rapidly that the global use of fossil fuels is now expected to peak by the mid-2020s and then start declining, the world’s leading energy agency said Tuesday.
+				</p>
+				<p>
+					But <span class="vocab">there’s a catch<span><b>"a spate of"</b> - there is a certain condition</span>: The transition away from coal, oil and natural gas still isn’t happening fast enough to avoid dangerous levels of global warming, the agency said, at least not unless governments take much stronger action to reduce their planet-warming carbon dioxide emissions over the next few years.
 				</p>
 			</section>
 			<section id="sec2">
