--- a/analysis/analysis.html
+++ b/analysis/analysis.html
@@ -35,8 +35,8 @@
 			<h1>Structural Analysis</h1>
 			<section>
 				<h2>Thesis Statement</h2>
-				<p>In the opening paragraph <a href="example.html#sec1">[Sec. #1]</a>, the last sentence as highlighted in the following quotes would be the thesis statement for the two reasons. First, it contains the keyword <q>dementia</q>, which is discussed throughout the entire essay. In addition, the key phrases <q>before symptoms emerge</q> indicates that the focus will be on early detection of dementia.</p>
-				<p class="quote"><q>Learning your odds of eventually developing dementia — a pressing concern for many, especially those with a family history of it — requires medical testing and counseling. But what if everyday behavior, like overlooking a couple of credit card payments or habitually braking while driving, could foretell your risk? A spate of experiments is underway to explore that possibility, reflecting the growing awareness that <span style="background-color: #80cdc1;">the pathologies underlying dementia can begin years or even decades before symptoms emerge</span>.</q></p>
+				<p>In the opening paragraph <a href="example.html#sec1">[Sec. #1]</a>, the first sentence as highlighted in the following quotes would be the thesis statement for the two reasons. First, it contains two key phrases <q>clean energy technologies</q>and<q>the global use of fossil fuels</q>, which are discussed throughout the entire essay. In addition, it mentions that a peak will achieve<q>by the mid-2020s</q>, which indicates a specific time session.</p>
+				<p class="quote"><q><span style="background-color: #80cdc1;">Clean energy technologies such as wind turbines, solar panels and electric vehicles are advancing so rapidly that the global use of fossil fuels is now expected to peak by the mid-2020s and then start declining</span>, the world’s leading energy agency said Tuesday.</q></p>
 			</section>
 			<section>
 				<h2>Essay Outline</h2>
