--- a/analysis/example.html
+++ b/analysis/example.html
@@ -62,7 +62,7 @@
 					Clean energy technologies such as wind turbines, solar panels and electric vehicles are advancing so rapidly that the global use of fossil fuels is now expected to peak by the mid-2020s and then start declining, the world’s leading energy agency said Tuesday.
 				</p>
 				<p>
-					But <span class="vocab">there’s a catch<span><b>"a spate of"</b> - there is a certain condition</span></span>: The transition away from coal, oil and natural gas still isn’t happening fast enough to avoid dangerous levels of global warming, the agency said, at least not unless governments take much stronger action to reduce their planet-warming carbon dioxide emissions over the next few years.
+					But <span class="vocab">there’s a catch<span><b>"there's a catch"</b> - there is a certain condition</span></span>: The transition away from coal, oil and natural gas still isn’t happening fast enough to avoid dangerous levels of global warming, the agency said, at least not unless governments take much stronger action to reduce their planet-warming carbon dioxide emissions over the next few years.
 				</p>
 			</section>
 			<section id="sec2">
